--- a/project2-image-classification/dlnd_image_classification.ipynb
+++ b/project2-image-classification/dlnd_image_classification.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -639,11 +639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Network Built!\n"
+     ]
+    }
+   ],
    "source": [
     "def conv_net(x, keep_prob):\n",
     "    \"\"\"\n",
@@ -655,28 +661,35 @@
     "    # TODO: Apply 1, 2, or 3 Convolution and Max Pool layers\n",
     "    #    Play around with different number of outputs, kernel size and stride\n",
     "    # Function Definition from Above:\n",
-    "    #    conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
+    "    x_tensor = x\n",
+    "    conv_num_outputs = 64\n",
+    "    num_outputs = 10\n",
+    "    conv_ksize = tuple([5, 5])\n",
+    "    conv_strides = tuple([3, 3])\n",
+    "    pool_ksize = tuple([2, 2])\n",
+    "    pool_strides = tuple([2, 2])\n",
     "    \n",
+    "    x_tensor = conv2d_maxpool(x_tensor, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
     "\n",
     "    # TODO: Apply a Flatten Layer\n",
     "    # Function Definition from Above:\n",
-    "    #   flatten(x_tensor)\n",
+    "    x_tensor = flatten(x_tensor)\n",
     "    \n",
     "\n",
     "    # TODO: Apply 1, 2, or 3 Fully Connected Layers\n",
     "    #    Play around with different number of outputs\n",
     "    # Function Definition from Above:\n",
-    "    #   fully_conn(x_tensor, num_outputs)\n",
+    "    x_tensor = fully_conn(x_tensor, num_outputs)\n",
     "    \n",
     "    \n",
     "    # TODO: Apply an Output Layer\n",
     "    #    Set this to the number of classes\n",
     "    # Function Definition from Above:\n",
-    "    #   output(x_tensor, num_outputs)\n",
+    "    x_tensor = output(x_tensor, num_outputs)\n",
     "    \n",
     "    \n",
     "    # TODO: return output\n",
-    "    return None\n",
+    "    return x_tensor\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -730,11 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def train_neural_network(session, optimizer, keep_probability, feature_batch, label_batch):\n",
     "    \"\"\"\n",
@@ -746,8 +765,8 @@
     "    : label_batch: Batch of Numpy label data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    pass\n",
     "\n",
+    "    session.run(optimizer, feed_dict={x: feature_batch, y: label_batch, keep_prob: keep_probability})\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -765,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -781,7 +800,20 @@
     "    : accuracy: TensorFlow accuracy function\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    pass"
+    "    loss = sess.run(cost, feed_dict={\n",
+    "        x: feature_batch,\n",
+    "        y: label_batch,\n",
+    "        keep_prob: 1.\n",
+    "    })\n",
+    "    \n",
+    "    valid_acc = sess.run(accuracy, feed_dict={\n",
+    "        x: valid_features,\n",
+    "        y: valid_labels,\n",
+    "        keep_prob: 1.})\n",
+    "    \n",
+    "    print('Loss: {:>10.4f} Validation Accuracy: {:.6f}'.format(\n",
+    "                loss,\n",
+    "                valid_acc))"
    ]
   },
   {
@@ -801,16 +833,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# TODO: Tune Parameters\n",
-    "epochs = None\n",
-    "batch_size = None\n",
-    "keep_probability = None"
+    "epochs = 10\n",
+    "batch_size = 64\n",
+    "keep_probability = 1"
    ]
   },
   {
@@ -823,11 +855,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking the Training on a Single Batch...\n",
+      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.2610 Validation Accuracy: 0.101000\n",
+      "Epoch  2, CIFAR-10 Batch 1:  Loss:     2.3065 Validation Accuracy: 0.100200\n",
+      "Epoch  3, CIFAR-10 Batch 1:  Loss:     2.3061 Validation Accuracy: 0.100000\n",
+      "Epoch  4, CIFAR-10 Batch 1:  Loss:     2.3057 Validation Accuracy: 0.100000\n",
+      "Epoch  5, CIFAR-10 Batch 1:  Loss:     2.3052 Validation Accuracy: 0.099600\n",
+      "Epoch  6, CIFAR-10 Batch 1:  Loss:     2.3049 Validation Accuracy: 0.099600\n",
+      "Epoch  7, CIFAR-10 Batch 1:  Loss:     2.3046 Validation Accuracy: 0.099600\n",
+      "Epoch  8, CIFAR-10 Batch 1:  Loss:     2.3043 Validation Accuracy: 0.099600\n",
+      "Epoch  9, CIFAR-10 Batch 1:  Loss:     2.3041 Validation Accuracy: 0.105000\n",
+      "Epoch 10, CIFAR-10 Batch 1:  Loss:     2.3040 Validation Accuracy: 0.105000\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
