--- a/4.RecurrentNeuralNetwork/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/4.RecurrentNeuralNetwork/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/01014477/local/anaconda3/envs/py3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from collections import namedtuple\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -72,9 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 64, 57, 72, 76, 61, 74,  1, 16,  0,  0,  0, 36, 57, 72, 72, 81,\n",
+       "        1, 62, 57, 69, 65, 68, 65, 61, 75,  1, 57, 74, 61,  1, 57, 68, 68,\n",
+       "        1, 57, 68, 65, 67, 61, 26,  1, 61, 78, 61, 74, 81,  1, 77, 70, 64,\n",
+       "       57, 72, 72, 81,  1, 62, 57, 69, 65, 68, 81,  1, 65, 75,  1, 77, 70,\n",
+       "       64, 57, 72, 72, 81,  1, 65, 70,  1, 65, 76, 75,  1, 71, 79, 70,  0,\n",
+       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70], dtype=int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -88,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocab)"
    ]
@@ -123,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,20 +185,28 @@
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the number of characters per batch and number of batches we can make\n",
-    "    characters_per_batch = \n",
-    "    n_batches = \n",
+    "    characters_per_batch = batch_size * n_steps\n",
+    "    n_batches = len(arr) // characters_per_batch\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    arr = arr[:n_batches * characters_per_batch]\n",
     "    \n",
     "    # Reshape into batch_size rows\n",
-    "    arr = \n",
+    "    arr = arr.reshape((batch_size, -1))\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n+n_steps]\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y_temp = arr[:, n+1:n+n_steps+1]\n",
+    "        \n",
+    "        # For the very last batch, y will be one character short at the end of \n",
+    "        # the sequences which breaks things. To get around this, I'll make an \n",
+    "        # array of the appropriate size first, of all zeros, then add the targets.\n",
+    "        # This will introduce a small artifact in the last batch, but it won't matter.\n",
+    "        y = np.zeros(x.shape, dtype=x.dtype)\n",
+    "        y[:,:y_temp.shape[1]] = y_temp\n",
+    "        \n",
     "        yield x, y"
    ]
   },
@@ -164,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +229,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[31 64 57 72 76 61 74  1 16  0]\n",
+      " [ 1 57 69  1 70 71 76  1 63 71]\n",
+      " [78 65 70 13  0  0  3 53 61 75]\n",
+      " [70  1 60 77 74 65 70 63  1 64]\n",
+      " [ 1 65 76  1 65 75 11  1 75 65]\n",
+      " [ 1 37 76  1 79 57 75  0 71 70]\n",
+      " [64 61 70  1 59 71 69 61  1 62]\n",
+      " [26  1 58 77 76  1 70 71 79  1]\n",
+      " [76  1 65 75 70  7 76 13  1 48]\n",
+      " [ 1 75 57 65 60  1 76 71  1 64]]\n",
+      "\n",
+      "y\n",
+      " [[64 57 72 76 61 74  1 16  0  0]\n",
+      " [57 69  1 70 71 76  1 63 71 65]\n",
+      " [65 70 13  0  0  3 53 61 75 11]\n",
+      " [ 1 60 77 74 65 70 63  1 64 65]\n",
+      " [65 76  1 65 75 11  1 75 65 74]\n",
+      " [37 76  1 79 57 75  0 71 70 68]\n",
+      " [61 70  1 59 71 69 61  1 62 71]\n",
+      " [ 1 58 77 76  1 70 71 79  1 75]\n",
+      " [ 1 65 75 70  7 76 13  1 48 64]\n",
+      " [75 57 65 60  1 76 71  1 64 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -235,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,11 +334,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder([batch_size, num_steps], dtype=np.int32, name='inputs')\n",
+    "    targets = tf.placeholder([batch_size, num_steps], dtype=np.int32, name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholder(dtype=np.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -308,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,15 +409,19 @@
     "\n",
     "    '''\n",
     "    ### Build the LSTM Cell\n",
-    "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
     "    \n",
-    "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    def build_cell(lstm_size, keep_prob):\n",
+    "        # Use a basic LSTM cell\n",
+    "        lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
+    "        \n",
+    "        # Add dropout to the cell\n",
+    "        drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "        return drop\n",
+    "    \n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([build_cell(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
