--- a/5.GenerativeAdversarialNetworks/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/5.GenerativeAdversarialNetworks/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -25,11 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/01014477/local/anaconda3/envs/py3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -41,11 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets('MNIST_data')"
@@ -64,15 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def model_inputs(real_dim, z_dim):\n",
-    "    inputs_real = \n",
-    "    inputs_z = \n",
+    "    inputs_real = tf.placeholder(tf.float32, (None, real_dim), name='inputs_real')\n",
+    "    inputs_z = tf.placeholder(tf.float32, (None, z_dim), name='inputs_z')\n",
     "    \n",
     "    return inputs_real, inputs_z"
    ]
@@ -114,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generator(z, out_dim, n_units=128, reuse=False,  alpha=0.01):\n",
@@ -135,15 +151,15 @@
     "        -------\n",
     "        out: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope('generator', reuse=reuse):\n",
     "        # Hidden layer\n",
-    "        h1 = \n",
+    "        h1 = tf.layers.dense(z, n_units, activation=None)\n",
     "        # Leaky ReLU\n",
-    "        h1 = \n",
+    "        h1 = tf.maximum(alpha * h1, h1)\n",
     "        \n",
     "        # Logits and tanh output\n",
-    "        logits = \n",
-    "        out = \n",
+    "        logits = tf.layers.dense(h1, out_dim, activation=None)\n",
+    "        out = tf.tanh(logits)\n",
     "        \n",
     "        return out"
    ]
@@ -161,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def discriminator(x, n_units=128, reuse=False, alpha=0.01):\n",
@@ -181,14 +195,14 @@
     "        -------\n",
     "        out, logits: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope('discriminator', reuse=reuse):\n",
     "        # Hidden layer\n",
-    "        h1 =\n",
+    "        h1 = tf.layers.dense(x, n_units, activation=None)\n",
     "        # Leaky ReLU\n",
-    "        h1 =\n",
+    "        h1 = tf.maximum(alpha * h1, h1)\n",
     "        \n",
-    "        logits =\n",
-    "        out =\n",
+    "        logits = tf.layers.dense(h1, 1, activation=None)\n",
+    "        out = tf.sigmoid(logits)\n",
     "        \n",
     "        return out, logits"
    ]
@@ -202,10 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Size of input image to discriminator\n",
@@ -240,23 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "# Create our input placeholders\n",
-    "input_real, input_z = \n",
+    "input_real, input_z = model_inputs(input_size, z_size)\n",
     "\n",
-    "# Generator network here\n",
-    "g_model = \n",
+    "# Build the model\n",
+    "g_model = generator(input_z, input_size, n_units=g_hidden_size, alpha=alpha)\n",
     "# g_model is the generator output\n",
     "\n",
-    "# Disriminator network here\n",
-    "d_model_real, d_logits_real = \n",
-    "d_model_fake, d_logits_fake = "
+    "d_model_real, d_logits_real = discriminator(input_real, n_units=d_hidden_size, alpha=alpha)\n",
+    "d_model_fake, d_logits_fake = discriminator(g_model, reuse=True, n_units=d_hidden_size, alpha=alpha)"
    ]
   },
   {
@@ -282,20 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate losses\n",
-    "d_loss_real = \n",
+    "d_loss_real = tf.reduce_mean(\n",
+    "                  tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_real, \n",
+    "                                                          labels=tf.ones_like(d_logits_real) * (1 - smooth)))\n",
+    "d_loss_fake = tf.reduce_mean(\n",
+    "                  tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_fake, \n",
+    "                                                          labels=tf.zeros_like(d_logits_real)))\n",
+    "d_loss = d_loss_real + d_loss_fake\n",
     "\n",
-    "d_loss_fake = \n",
-    "\n",
-    "d_loss = \n",
-    "\n",
-    "g_loss = "
+    "g_loss = tf.reduce_mean(\n",
+    "             tf.nn.sigmoid_cross_entropy_with_logits(logits=d_logits_fake,\n",
+    "                                                     labels=tf.ones_like(d_logits_fake)))"
    ]
   },
   {
@@ -317,9 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -328,12 +338,12 @@
     "learning_rate = 0.002\n",
     "\n",
     "# Get the trainable_variables, split into G and D parts\n",
-    "t_vars = \n",
-    "g_vars = \n",
-    "d_vars = \n",
+    "t_vars = tf.trainable_variables()\n",
+    "g_vars = [var for var in t_vars if var.name.startswith('generator')]\n",
+    "d_vars = [var for var in t_vars if var.name.startswith('discriminator')]\n",
     "\n",
-    "d_train_opt = \n",
-    "g_train_opt = "
+    "d_train_opt = tf.train.AdamOptimizer(learning_rate).minimize(d_loss, var_list=d_vars)\n",
+    "g_train_opt = tf.train.AdamOptimizer(learning_rate).minimize(g_loss, var_list=g_vars)"
    ]
   },
   {
@@ -347,10 +357,111 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100... Discriminator Loss: 0.3491... Generator Loss: 4.2999\n",
+      "Epoch 2/100... Discriminator Loss: 0.4711... Generator Loss: 2.2302\n",
+      "Epoch 3/100... Discriminator Loss: 0.5157... Generator Loss: 2.3036\n",
+      "Epoch 4/100... Discriminator Loss: 0.5616... Generator Loss: 4.6599\n",
+      "Epoch 5/100... Discriminator Loss: 3.0058... Generator Loss: 3.7438\n",
+      "Epoch 6/100... Discriminator Loss: 1.0043... Generator Loss: 1.7271\n",
+      "Epoch 7/100... Discriminator Loss: 0.6875... Generator Loss: 1.9415\n",
+      "Epoch 8/100... Discriminator Loss: 2.0398... Generator Loss: 0.9179\n",
+      "Epoch 9/100... Discriminator Loss: 1.2973... Generator Loss: 2.9973\n",
+      "Epoch 10/100... Discriminator Loss: 0.6061... Generator Loss: 3.5716\n",
+      "Epoch 11/100... Discriminator Loss: 1.2990... Generator Loss: 2.1351\n",
+      "Epoch 12/100... Discriminator Loss: 0.8027... Generator Loss: 2.8175\n",
+      "Epoch 13/100... Discriminator Loss: 1.2413... Generator Loss: 1.5883\n",
+      "Epoch 14/100... Discriminator Loss: 1.3325... Generator Loss: 2.1264\n",
+      "Epoch 15/100... Discriminator Loss: 1.5350... Generator Loss: 4.3044\n",
+      "Epoch 16/100... Discriminator Loss: 1.4846... Generator Loss: 2.3745\n",
+      "Epoch 17/100... Discriminator Loss: 1.3028... Generator Loss: 1.4559\n",
+      "Epoch 18/100... Discriminator Loss: 0.9199... Generator Loss: 2.0155\n",
+      "Epoch 19/100... Discriminator Loss: 1.0306... Generator Loss: 2.6965\n",
+      "Epoch 20/100... Discriminator Loss: 1.3155... Generator Loss: 1.9830\n",
+      "Epoch 21/100... Discriminator Loss: 1.0957... Generator Loss: 2.1536\n",
+      "Epoch 22/100... Discriminator Loss: 0.9634... Generator Loss: 2.1538\n",
+      "Epoch 23/100... Discriminator Loss: 1.4039... Generator Loss: 1.2743\n",
+      "Epoch 24/100... Discriminator Loss: 0.8651... Generator Loss: 2.4178\n",
+      "Epoch 25/100... Discriminator Loss: 1.0418... Generator Loss: 2.9296\n",
+      "Epoch 26/100... Discriminator Loss: 0.6995... Generator Loss: 2.3977\n",
+      "Epoch 27/100... Discriminator Loss: 0.9322... Generator Loss: 2.5607\n",
+      "Epoch 28/100... Discriminator Loss: 1.3070... Generator Loss: 1.1930\n",
+      "Epoch 29/100... Discriminator Loss: 1.1401... Generator Loss: 1.5191\n",
+      "Epoch 30/100... Discriminator Loss: 1.0672... Generator Loss: 1.7458\n",
+      "Epoch 31/100... Discriminator Loss: 1.2297... Generator Loss: 2.4800\n",
+      "Epoch 32/100... Discriminator Loss: 0.8477... Generator Loss: 2.3693\n",
+      "Epoch 33/100... Discriminator Loss: 0.7635... Generator Loss: 2.6489\n",
+      "Epoch 34/100... Discriminator Loss: 0.7777... Generator Loss: 2.3674\n",
+      "Epoch 35/100... Discriminator Loss: 0.8297... Generator Loss: 2.1186\n",
+      "Epoch 36/100... Discriminator Loss: 1.2471... Generator Loss: 2.3479\n",
+      "Epoch 37/100... Discriminator Loss: 1.0183... Generator Loss: 1.9124\n",
+      "Epoch 38/100... Discriminator Loss: 1.1628... Generator Loss: 2.7501\n",
+      "Epoch 39/100... Discriminator Loss: 0.9522... Generator Loss: 1.8530\n",
+      "Epoch 40/100... Discriminator Loss: 1.0275... Generator Loss: 2.0155\n",
+      "Epoch 41/100... Discriminator Loss: 1.1040... Generator Loss: 1.3441\n",
+      "Epoch 42/100... Discriminator Loss: 1.0199... Generator Loss: 1.9915\n",
+      "Epoch 43/100... Discriminator Loss: 0.7466... Generator Loss: 2.3413\n",
+      "Epoch 44/100... Discriminator Loss: 1.2560... Generator Loss: 2.7531\n",
+      "Epoch 45/100... Discriminator Loss: 1.1029... Generator Loss: 1.3776\n",
+      "Epoch 46/100... Discriminator Loss: 0.9852... Generator Loss: 2.0235\n",
+      "Epoch 47/100... Discriminator Loss: 0.9573... Generator Loss: 2.1861\n",
+      "Epoch 48/100... Discriminator Loss: 1.0355... Generator Loss: 1.5046\n",
+      "Epoch 49/100... Discriminator Loss: 1.0237... Generator Loss: 1.9853\n",
+      "Epoch 50/100... Discriminator Loss: 0.7520... Generator Loss: 2.2840\n",
+      "Epoch 51/100... Discriminator Loss: 0.9747... Generator Loss: 1.6511\n",
+      "Epoch 52/100... Discriminator Loss: 1.2025... Generator Loss: 1.4080\n",
+      "Epoch 53/100... Discriminator Loss: 1.2521... Generator Loss: 1.4072\n",
+      "Epoch 54/100... Discriminator Loss: 1.0288... Generator Loss: 1.7520\n",
+      "Epoch 55/100... Discriminator Loss: 1.2500... Generator Loss: 1.8431\n",
+      "Epoch 56/100... Discriminator Loss: 0.8611... Generator Loss: 2.1744\n",
+      "Epoch 57/100... Discriminator Loss: 0.8843... Generator Loss: 2.2145\n",
+      "Epoch 58/100... Discriminator Loss: 0.9127... Generator Loss: 2.3802\n",
+      "Epoch 59/100... Discriminator Loss: 0.8506... Generator Loss: 2.5759\n",
+      "Epoch 60/100... Discriminator Loss: 0.9352... Generator Loss: 1.7645\n",
+      "Epoch 61/100... Discriminator Loss: 1.0135... Generator Loss: 2.4425\n",
+      "Epoch 62/100... Discriminator Loss: 1.0631... Generator Loss: 1.5039\n",
+      "Epoch 63/100... Discriminator Loss: 0.9703... Generator Loss: 1.6905\n",
+      "Epoch 64/100... Discriminator Loss: 1.1374... Generator Loss: 1.3461\n",
+      "Epoch 65/100... Discriminator Loss: 0.9307... Generator Loss: 1.9105\n",
+      "Epoch 66/100... Discriminator Loss: 1.0123... Generator Loss: 1.5829\n",
+      "Epoch 67/100... Discriminator Loss: 0.8393... Generator Loss: 2.0184\n",
+      "Epoch 68/100... Discriminator Loss: 1.0601... Generator Loss: 1.8965\n",
+      "Epoch 69/100... Discriminator Loss: 1.1294... Generator Loss: 1.3547\n",
+      "Epoch 70/100... Discriminator Loss: 1.0399... Generator Loss: 1.7391\n",
+      "Epoch 71/100... Discriminator Loss: 0.9680... Generator Loss: 1.9277\n",
+      "Epoch 72/100... Discriminator Loss: 0.8974... Generator Loss: 2.0564\n",
+      "Epoch 73/100... Discriminator Loss: 0.9318... Generator Loss: 1.9318\n",
+      "Epoch 74/100... Discriminator Loss: 0.9902... Generator Loss: 1.6330\n",
+      "Epoch 75/100... Discriminator Loss: 0.9162... Generator Loss: 2.4271\n",
+      "Epoch 76/100... Discriminator Loss: 0.9489... Generator Loss: 1.9249\n",
+      "Epoch 77/100... Discriminator Loss: 0.9411... Generator Loss: 1.8770\n",
+      "Epoch 78/100... Discriminator Loss: 0.8308... Generator Loss: 2.1941\n",
+      "Epoch 79/100... Discriminator Loss: 0.9511... Generator Loss: 1.9870\n",
+      "Epoch 80/100... Discriminator Loss: 1.1333... Generator Loss: 1.5176\n",
+      "Epoch 81/100... Discriminator Loss: 1.0049... Generator Loss: 1.9854\n",
+      "Epoch 82/100... Discriminator Loss: 0.9611... Generator Loss: 1.8123\n",
+      "Epoch 83/100... Discriminator Loss: 1.0185... Generator Loss: 2.0513\n",
+      "Epoch 84/100... Discriminator Loss: 1.0999... Generator Loss: 1.4860\n",
+      "Epoch 85/100... Discriminator Loss: 0.8932... Generator Loss: 1.8371\n",
+      "Epoch 86/100... Discriminator Loss: 0.9593... Generator Loss: 1.8294\n",
+      "Epoch 87/100... Discriminator Loss: 0.8956... Generator Loss: 1.9392\n",
+      "Epoch 88/100... Discriminator Loss: 1.0710... Generator Loss: 1.5239\n",
+      "Epoch 89/100... Discriminator Loss: 0.8097... Generator Loss: 2.2073\n",
+      "Epoch 90/100... Discriminator Loss: 0.8817... Generator Loss: 2.1146\n",
+      "Epoch 91/100... Discriminator Loss: 1.0607... Generator Loss: 1.5722\n",
+      "Epoch 92/100... Discriminator Loss: 0.9261... Generator Loss: 1.7432\n",
+      "Epoch 93/100... Discriminator Loss: 0.9353... Generator Loss: 1.8462\n",
+      "Epoch 94/100... Discriminator Loss: 0.9468... Generator Loss: 1.8405\n",
+      "Epoch 95/100... Discriminator Loss: 0.8621... Generator Loss: 1.8463\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 100\n",
     "epochs = 100\n",
@@ -409,9 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -422,9 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -447,9 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def view_samples(epoch, samples):\n",
@@ -465,9 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load samples from generator taken while training\n",
@@ -485,9 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_ = view_samples(-1, samples)"
@@ -503,9 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rows, cols = 10, 6\n",
@@ -537,9 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "saver = tf.train.Saver(var_list=g_vars)\n",
@@ -551,6 +648,13 @@
     "                   feed_dict={input_z: sample_z})\n",
     "view_samples(0, [gen_samples])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
